--- a/app/templates/components/easy-form/form-input.hbs
+++ b/app/templates/components/easy-form/form-input.hbs
@@ -1,5 +1,5 @@
 {{label-field property=propertyName text=labelText}}
-{{input-field property=propertyName inputOptions=inputOptions}}
+{{input-field property=propertyName name=name inputOptions=inputOptions}}
 {{#if showError}}{{error-field property=propertyName}}{{/if}}
 {{#if hint}}{{hint-field property=propertyName text=hintText}}{{/if}}
 
