Defining input-field as a keyworkd

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -7,6 +7,8 @@
 Dentro do form
 {{form-input "firstName"}}
 {{form-input "lastName"}}
+{{form-input "password"}}
+{{form-input "age"}}
 {{submit-button}}
 {{/form-for}}
 
