--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -5,7 +5,7 @@
 
 {{#form-for model}}
 Dentro do form
-{{form-input "firstName"}}
+{{form-input "firstName" as="text"}}
 {{form-input "lastName"}}
 {{form-input "password"}}
 {{form-input "age"}}
