--- a/tests/dummy/app/templates/person.hbs
+++ b/tests/dummy/app/templates/person.hbs
@@ -1,10 +1,10 @@
 <h2>Person form</h2>
 <div id="teste">
 {{#form-for model}}
-  {{form-input "firstName"}}
-  {{form-input "lastName"}}
-  {{form-input "city" as="select" collection=controller.cities}}
-  {{form-input controller.welcomeMessage
+  {{input-for "firstName"}}
+  {{input-for "lastName"}}
+  {{input-for "city" as="select" collection=controller.cities}}
+  {{input-for controller.welcomeMessage
           class="welcomeMessage"
           label="Message"
           hint="Property defined in the controller."}}
