--- a/app/templates/components/easy-form/form-select.hbs
+++ b/app/templates/components/easy-form/form-select.hbs
@@ -1,1 +1,1 @@
-{{view 'select' content=collection selection=selection prompt=prompt optionValuePath=optionValuePath optionLabelPath=optionLabelPath}}
+{{!--view 'select' content=collection selection=selection prompt=prompt optionValuePath=optionValuePath optionLabelPath=optionLabelPath--}}
